--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,5 @@
 <IfModule mod_rewrite.c>
+    Header always set Access-Control-Allow-Origin "*"
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
@@ -6,6 +7,7 @@
     RewriteEngine On
 
     # Handle Authorization Header
+    Header always set Access-Control-Allow-Origin "*"
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
